[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.0.1"
authors = [
    { name = "Anton Herasymenko", email = "anton.grsm@gmail.com" },
]
description = "Simple scheduler"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click==8.1.7",
    "fastapi==0.115.2",
    "uvicorn==0.32.0",
    "build==1.2.2.post1"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2"
]

[tool.pytest.ini_options]
minversion = "8.3.3"
testpaths = [
    "tests"
]
